[package]
name = "ip-info"
version = "0.1.0"
authors = ["ghost <ylck77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-files = "0.1.1"
futures = "0.1.25"
maxminddb = { version = "0.13.0", features = ["mmap"] }
memmap = "0.7.0"
serde = "1.0"
serde_json = "1.0"
